// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterList Snapshot Tests > should match snapshot with date filter 1`] = `
<div
>

  <button
    class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
    data-ods="tag"
    type="button"
    data-testid="filter-list_tag_item"
  >Date de création est égal à 15/10/2023

    <span
      class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
      data-ods="icon"
      role="presentation"
    >
    </span
    >
    </button
    >
    </div
    >
`;

exports[`FilterList Snapshot Tests > should match snapshot with different comparators 1`] = `
<div
>

  <button
    class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
    data-ods="tag"
    type="button"
    data-testid="filter-list_tag_item"
  >Name débute par Test

    <span
      class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
      data-ods="icon"
      role="presentation"
    >
    </span
    >
    </button
    >

      <button
        class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
        data-ods="tag"
        type="button"
        data-testid="filter-list_tag_item"
      >Email termine par @example.com

        <span
          class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
          data-ods="icon"
          role="presentation"
        >
        </span
        >
        </button
        >

          <button
            class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
            data-ods="tag"
            type="button"
            data-testid="filter-list_tag_item"
          >Role est différent de guest

            <span
              class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
              data-ods="icon"
              role="presentation"
            >
            </span
            >
            </button
            >
            </div
            >
`;

exports[`FilterList Snapshot Tests > should match snapshot with empty filters 1`] = `
<div
>
</div
>
`;

exports[`FilterList Snapshot Tests > should match snapshot with multiple filters 1`] = `
<div
>

  <button
    class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
    data-ods="tag"
    type="button"
    data-testid="filter-list_tag_item"
  >Username contient admin

    <span
      class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
      data-ods="icon"
      role="presentation"
    >
    </span
    >
    </button
    >

      <button
        class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
        data-ods="tag"
        type="button"
        data-testid="filter-list_tag_item"
      >Status est égal à active

        <span
          class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
          data-ods="icon"
          role="presentation"
        >
        </span
        >
        </button
        >

          <button
            class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
            data-ods="tag"
            type="button"
            data-testid="filter-list_tag_item"
          >Created After est après 01/01/2023

            <span
              class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
              data-ods="icon"
              role="presentation"
            >
            </span
            >
            </button
            >
            </div
            >
`;

exports[`FilterList Snapshot Tests > should match snapshot with numeric filter 1`] = `
<div
>

  <button
    class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
    data-ods="tag"
    type="button"
    data-testid="filter-list_tag_item"
  >Age est supérieur à 25

    <span
      class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
      data-ods="icon"
      role="presentation"
    >
    </span
    >
    </button
    >
    </div
    >
`;

exports[`FilterList Snapshot Tests > should match snapshot with single string filter 1`] = `
<div
>

  <button
    class="_tag--information_HASH_35 _tag--lg_HASH_114 _tag_HASH_6 mr-3"
    data-ods="tag"
    type="button"
    data-testid="filter-list_tag_item"
  >Nom d'utilisateur contient john_doe

    <span
      class="_icon--xmark_HASH_562 _icon_HASH_2 _tag__close_HASH_111"
      data-ods="icon"
      role="presentation"
    >
    </span
    >
    </button
    >
    </div
    >
`;
